--- a/architects.html
+++ b/architects.html
@@ -7,6 +7,7 @@
     <title>G3 Architects Website</title>
 </head>
 <body>
+    <!--header starting-->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -26,8 +27,32 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
-    <main>
+    <!--Header end-->
 
+     <!--main style start-->
+    <main>
+        <!--Teems section start-->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="q-list">Quick list</span> <span>of Our</span> <span class="Features">Features</span></h3>
+                <p class="teams-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!--features section-->
+        <section class="features">
+
+        </section>
+        <section class="facts">
+            <h3 class="repeat-h3">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </section>
     </main>
     <footer>
 
