--- a/architects.html
+++ b/architects.html
@@ -47,11 +47,39 @@
         </section>
         <!--features section-->
         <section class="features">
-
+            <div class="features-content">
+                <h1 class="features-section-title">
+                    Features you will<br> love & enjoy
+                </h1>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+                <div class="years">
+                    <h2>10+Year</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
         <section class="facts">
-            <h3 class="repeat-h3">Some Facts</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <h3 class="fact-h3 repeat-h3">Some Facts</h3>
+            <p class=" fact-desc text-light-gray">There are many variations of passages of Lorem Ipsum available, but<br> the majority have suffered alteration.</p>
             <div class="fact-card-container">
                 <div class="card">
                     <img src="images/icons/ribon.png" alt="">
@@ -73,6 +101,18 @@
                     <h2 class="card-stats">22578</h2>
                     <p class="card-title text-light-gray">Email Send</p>
                 </div>
+            </div>
+        </section>
+        <!--sponsore section-->
+        <section class="sponsore-container">
+            <h3 class="repeat-h3">Our Sponspors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="sponsore-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
     </main>
